--- a/week3/index.html
+++ b/week3/index.html
@@ -1,3 +1,6 @@
+<!--I was determined to do this homework without using JavaScript code and other Franeworks. 
+I am sure that I can do it. But, time is not enough for me. That's my big mistake.
+I couldn't manage my time.-->
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
