--- a/week3/index.html
+++ b/week3/index.html
@@ -15,7 +15,7 @@ I couldn't manage my time.-->
                 <div class="container">
                     <div id="branding">
                         <i class="fas fa-align-justify"></i>
-                        <span>Think with</span><img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_92x30dp.png">
+                        <span class="logo">Think with</span><img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_92x30dp.png">
                     </div>
                     <div class="toggle">
                         <ul>
